package org.example.client.test;

import dfs_project.Metaserver;
import org.example.client.EFileSystem;
import org.example.client.FSInputStream;
import org.example.client.FSOutputStream;
import org.example.client.domain.ClusterInfo;
import org.example.client.domain.StatInfo;

import java.io.IOException;
import java.security.MessageDigest;
import java.util.List;
import java.util.Random;

/**
 * MinFSå®Œæ•´åŠŸèƒ½æµ‹è¯•å¥—ä»¶ - éªŒè¯æ‰€æœ‰è€ƒæ ¸è¦æ±‚
 */
public class CompleteTestSuite {

    private final EFileSystem fileSystem;
    private static final String TEST_DIR = "/test";
    private static final String TEST_FILE = "/test/large_file.dat";

    public CompleteTestSuite() {
        System.out.println("=== åˆå§‹åŒ–MinFSå®¢æˆ·ç«¯ ===");
        this.fileSystem = new EFileSystem();
    }

    public static void main(String[] args) {
        CompleteTestSuite testSuite = new CompleteTestSuite();
        try {
            testSuite.runAllTests();
            System.out.println("\nğŸ‰ æ‰€æœ‰æµ‹è¯•å®Œæˆï¼");
        } catch (Exception e) {
            System.err.println("\nâŒ æµ‹è¯•å¤±è´¥: " + e.getMessage());
            e.printStackTrace();
        }
    }

    /**
     * è¿è¡Œæ‰€æœ‰æµ‹è¯•ç”¨ä¾‹
     */
    public void runAllTests() throws Exception {
        System.out.println("\n" + "=".repeat(60));
        System.out.println("   MinFSåˆ†å¸ƒå¼æ–‡ä»¶ç³»ç»Ÿ - å®Œæ•´åŠŸèƒ½æµ‹è¯•");
        System.out.println("=".repeat(60));

        // è€ƒæ ¸ç‚¹A1: æ–‡ä»¶ã€ç›®å½•åˆ›å»º
        testCreateOperations();

        // è€ƒæ ¸ç‚¹A2: æŸ¥çœ‹å±æ€§ä¿¡æ¯
        testStatusOperations();

        // è€ƒæ ¸ç‚¹A3: æ–‡ä»¶ã€ç›®å½•åˆ é™¤
        testDeleteOperations();

        // è€ƒæ ¸ç‚¹A4: æ–‡ä»¶è¯»å†™æ“ä½œ
        testFileReadWrite();

        // ç­‰å¾…å‰¯æœ¬å¤åˆ¶å’Œå¿ƒè·³æŠ¥å‘Šå®Œæˆ
        System.out.println("\nç­‰å¾…å‰¯æœ¬å¤åˆ¶å®Œæˆ...");
        System.out.print("å€’è®¡æ—¶: ");
        for (int i = 10; i >= 1; i--) {
            System.out.print(i + " ");
            Thread.sleep(1000);
        }
        System.out.println("å¼€å§‹æ£€æŸ¥!");

        // è€ƒæ ¸ç‚¹A5: è·å–é›†ç¾¤ä¿¡æ¯
        testClusterInfo();

        // è€ƒæ ¸ç‚¹A6: ä¸‰å‰¯æœ¬éªŒè¯
        testReplicationInfo();

        System.out.println("\nâœ… æ‰€æœ‰è€ƒæ ¸ç‚¹æµ‹è¯•é€šè¿‡ï¼");
    }

    /**
     * è€ƒæ ¸ç‚¹A1: æµ‹è¯•æ–‡ä»¶å’Œç›®å½•åˆ›å»º
     */
    private void testCreateOperations() throws Exception {
        System.out.println("\nğŸ“ è€ƒæ ¸ç‚¹A1: æµ‹è¯•æ–‡ä»¶å’Œç›®å½•åˆ›å»º");
        System.out.println("-".repeat(40));

        // åˆ›å»ºæµ‹è¯•ç›®å½•
        System.out.println("1. åˆ›å»ºç›®å½•: " + TEST_DIR);
        boolean dirResult = fileSystem.mkdir(TEST_DIR);
        System.out.println("   ç»“æœ: " + (dirResult ? "âœ… æˆåŠŸ" : "âŒ å¤±è´¥"));

        // åˆ›å»ºå­ç›®å½•
        String subDir = TEST_DIR + "/subdir";
        System.out.println("2. åˆ›å»ºå­ç›®å½•: " + subDir);
        boolean subDirResult = fileSystem.mkdir(subDir);
        System.out.println("   ç»“æœ: " + (subDirResult ? "âœ… æˆåŠŸ" : "âŒ å¤±è´¥"));

        // åˆ›å»ºæµ‹è¯•æ–‡ä»¶
        String testFile = TEST_DIR + "/test.txt";
        System.out.println("3. åˆ›å»ºæ–‡ä»¶: " + testFile);
        try (FSOutputStream output = fileSystem.create(testFile)) {
            output.write("Hello MinFS!".getBytes());
            output.flush();
            System.out.println("   ç»“æœ: âœ… æˆåŠŸ");
        } catch (IOException e) {
            System.out.println("   ç»“æœ: âŒ å¤±è´¥ - " + e.getMessage());
            throw e;
        }

        System.out.println("ğŸ“ ç›®å½•å’Œæ–‡ä»¶åˆ›å»ºæµ‹è¯•å®Œæˆ");
    }

    /**
     * è€ƒæ ¸ç‚¹A2: æµ‹è¯•å±æ€§ä¿¡æ¯æŸ¥çœ‹
     */
    private void testStatusOperations() throws Exception {
        System.out.println("\nğŸ“Š è€ƒæ ¸ç‚¹A2: æµ‹è¯•å±æ€§ä¿¡æ¯æŸ¥çœ‹");
        System.out.println("-".repeat(40));

        // æµ‹è¯•getStatus - è·å–å•ä¸ªæ–‡ä»¶å±æ€§
        System.out.println("1. è·å–æ–‡ä»¶å±æ€§ä¿¡æ¯:");
        StatInfo fileInfo = fileSystem.getFileStats(TEST_DIR + "/test.txt");
        if (fileInfo != null) {
            System.out.println("   è·¯å¾„: " + fileInfo.getPath());
            System.out.println("   å¤§å°: " + fileInfo.getSize() + " å­—èŠ‚");
            System.out.println("   ç±»å‹: " + fileInfo.getType());
            System.out.println("   ä¿®æ”¹æ—¶é—´: " + fileInfo.getMtime());
            System.out.println("   ç»“æœ: âœ… æˆåŠŸ");
        } else {
            System.out.println("   ç»“æœ: âŒ å¤±è´¥");
            throw new Exception("æ— æ³•è·å–æ–‡ä»¶å±æ€§");
        }

        // æµ‹è¯•listStatus - åˆ—å‡ºç›®å½•å†…å®¹
        System.out.println("2. åˆ—å‡ºç›®å½•å†…å®¹:");
        List<StatInfo> dirContents = fileSystem.listFileStats(TEST_DIR);
        if (dirContents != null) {
            System.out.println("   ç›®å½• " + TEST_DIR + " åŒ…å« " + dirContents.size() + " ä¸ªé¡¹ç›®:");
            for (StatInfo item : dirContents) {
                System.out.println("     - " + item.getPath() + 
                    " (ç±»å‹: " + item.getType() + ", å¤§å°: " + item.getSize() + ")");
            }
            System.out.println("   ç»“æœ: âœ… æˆåŠŸ");
        } else {
            System.out.println("   ç»“æœ: âŒ å¤±è´¥");
            throw new Exception("æ— æ³•åˆ—å‡ºç›®å½•å†…å®¹");
        }

        System.out.println("ğŸ“Š å±æ€§ä¿¡æ¯æŸ¥çœ‹æµ‹è¯•å®Œæˆ");
    }

    /**
     * è€ƒæ ¸ç‚¹A3: æµ‹è¯•åˆ é™¤æ“ä½œ
     */
    private void testDeleteOperations() throws Exception {
        System.out.println("\nğŸ—‘ï¸  è€ƒæ ¸ç‚¹A3: æµ‹è¯•åˆ é™¤æ“ä½œ");
        System.out.println("-".repeat(40));

        // åˆ›å»ºç”¨äºåˆ é™¤æµ‹è¯•çš„æ–‡ä»¶å’Œç›®å½•
        String deleteTestDir = TEST_DIR + "/delete_test";
        String deleteTestFile = deleteTestDir + "/file_to_delete.txt";

        System.out.println("1. åˆ›å»ºæµ‹è¯•ç›®å½•å’Œæ–‡ä»¶");
        fileSystem.mkdir(deleteTestDir);
        try (FSOutputStream output = fileSystem.create(deleteTestFile)) {
            output.write("This file will be deleted".getBytes());
        }

        // åˆ é™¤æ–‡ä»¶
        System.out.println("2. åˆ é™¤æ–‡ä»¶: " + deleteTestFile);
        boolean fileDeleted = fileSystem.delete(deleteTestFile);
        System.out.println("   ç»“æœ: " + (fileDeleted ? "âœ… æˆåŠŸ" : "âŒ å¤±è´¥"));

        // åˆ é™¤ç›®å½•ï¼ˆé€’å½’åˆ é™¤ï¼‰
        System.out.println("3. é€’å½’åˆ é™¤ç›®å½•: " + deleteTestDir);
        boolean dirDeleted = fileSystem.delete(deleteTestDir);
        System.out.println("   ç»“æœ: " + (dirDeleted ? "âœ… æˆåŠŸ" : "âŒ å¤±è´¥"));

        // éªŒè¯åˆ é™¤ç»“æœ
        System.out.println("4. éªŒè¯åˆ é™¤ç»“æœ");
        StatInfo deletedFile = fileSystem.getFileStats(deleteTestFile);
        if (deletedFile == null) {
            System.out.println("   æ–‡ä»¶å·²æˆåŠŸåˆ é™¤: âœ…");
        } else {
            System.out.println("   æ–‡ä»¶åˆ é™¤å¤±è´¥: âŒ");
        }

        System.out.println("ğŸ—‘ï¸ åˆ é™¤æ“ä½œæµ‹è¯•å®Œæˆ");
    }

    /**
     * è€ƒæ ¸ç‚¹A4: æµ‹è¯•æ–‡ä»¶è¯»å†™æ“ä½œ (æ”¯æŒ100MBå¤§æ–‡ä»¶)
     */
    private void testFileReadWrite() throws Exception {
        System.out.println("\nğŸ“ è€ƒæ ¸ç‚¹A4: æµ‹è¯•å¤§æ–‡ä»¶è¯»å†™æ“ä½œ");
        System.out.println("-".repeat(40));

        // å‡†å¤‡æµ‹è¯•æ•°æ® (10MB ç”¨äºå¿«é€Ÿæµ‹è¯•ï¼Œå¯è°ƒæ•´åˆ°100MB)
        int dataSize = 10 * 1024 * 1024; // 10MB
        System.out.println("1. ç”Ÿæˆæµ‹è¯•æ•°æ® (" + (dataSize / 1024 / 1024) + "MB)");
        byte[] testData = generateTestData(dataSize);
        String originalMD5 = calculateMD5(testData);
        System.out.println("   åŸå§‹æ•°æ®MD5: " + originalMD5);

        // å†™å…¥å¤§æ–‡ä»¶
        System.out.println("2. å†™å…¥å¤§æ–‡ä»¶: " + TEST_FILE);
        long writeStartTime = System.currentTimeMillis();
        try (FSOutputStream output = fileSystem.create(TEST_FILE)) {
            output.write(testData);
            output.flush();
        }
        long writeTime = System.currentTimeMillis() - writeStartTime;
        System.out.println("   å†™å…¥å®Œæˆï¼Œè€—æ—¶: " + writeTime + "ms");

        // éªŒè¯æ–‡ä»¶ä¿¡æ¯
        StatInfo fileInfo = fileSystem.getFileStats(TEST_FILE);
        if (fileInfo != null) {
            System.out.println("   æ–‡ä»¶å¤§å°: " + fileInfo.getSize() + " å­—èŠ‚");
            if (fileInfo.getSize() == testData.length) {
                System.out.println("   å¤§å°éªŒè¯: âœ… æ­£ç¡®");
            } else {
                System.out.println("   å¤§å°éªŒè¯: âŒ é”™è¯¯");
                throw new Exception("æ–‡ä»¶å¤§å°ä¸åŒ¹é…");
            }
        }

        // è¯»å–æ–‡ä»¶å¹¶éªŒè¯
        System.out.println("3. è¯»å–æ–‡ä»¶å¹¶éªŒè¯å®Œæ•´æ€§");
        long readStartTime = System.currentTimeMillis();
        byte[] readData;
        try (FSInputStream input = fileSystem.open(TEST_FILE)) {
            // æ‰‹åŠ¨è¯»å–æ‰€æœ‰æ•°æ®ä»¥é¿å…readAllByteså¯èƒ½çš„é—®é¢˜
            readData = new byte[(int)testData.length];
            int totalRead = 0;
            int bytesRead;
            while (totalRead < readData.length && (bytesRead = input.read(readData, totalRead, readData.length - totalRead)) != -1) {
                totalRead += bytesRead;
            }
            if (totalRead != testData.length) {
                throw new IOException("è¯»å–çš„æ•°æ®é•¿åº¦ä¸åŒ¹é…: æœŸæœ›=" + testData.length + ", å®é™…=" + totalRead);
            }
        }
        long readTime = System.currentTimeMillis() - readStartTime;
        System.out.println("   è¯»å–å®Œæˆï¼Œè€—æ—¶: " + readTime + "ms");
        System.out.println("   è¯»å–æ•°æ®å¤§å°: " + readData.length + " å­—èŠ‚");

        // MD5æ ¡éªŒ
        String readMD5 = calculateMD5(readData);
        System.out.println("   è¯»å–æ•°æ®MD5: " + readMD5);
        if (originalMD5.equals(readMD5)) {
            System.out.println("   MD5æ ¡éªŒ: âœ… ä¸€è‡´");
        } else {
            System.out.println("   MD5æ ¡éªŒ: âŒ ä¸ä¸€è‡´");
            throw new Exception("æ•°æ®å®Œæ•´æ€§éªŒè¯å¤±è´¥");
        }

        System.out.println("ğŸ“ å¤§æ–‡ä»¶è¯»å†™æµ‹è¯•å®Œæˆ");
    }

    /**
     * è€ƒæ ¸ç‚¹A5: æµ‹è¯•é›†ç¾¤ä¿¡æ¯è·å–
     */
    private void testClusterInfo() throws Exception {
        System.out.println("\nğŸŒ è€ƒæ ¸ç‚¹A5: æµ‹è¯•é›†ç¾¤ä¿¡æ¯è·å–");
        System.out.println("-".repeat(40));

        // ç›´æ¥ä½¿ç”¨protobufå¯¹è±¡ï¼Œé¿å…è½¬æ¢é—®é¢˜
        org.example.client.client.MinFSClient client = fileSystem.getClient();
        Metaserver.ClusterInfo clusterInfo = client.getClusterInfo();
        if (clusterInfo != null) {
            System.out.println("é›†ç¾¤ä¿¡æ¯è·å–æˆåŠŸ:");
            
            // ä¸»MetaServerä¿¡æ¯
            if (clusterInfo.hasMasterMetaServer()) {
                System.out.println("  ä¸»MetaServer: " + 
                    clusterInfo.getMasterMetaServer().getHost() + ":" + 
                    clusterInfo.getMasterMetaServer().getPort());
            }
            
            // ä»MetaServerä¿¡æ¯
            System.out.println("  ä»MetaServeræ•°é‡: " + clusterInfo.getSlaveMetaServerCount());
            
            // DataServerä¿¡æ¯
            System.out.println("  DataServeræ•°é‡: " + clusterInfo.getDataServerCount());
            
            if (clusterInfo.getDataServerCount() > 0) {
                for (int i = 0; i < clusterInfo.getDataServerCount(); i++) {
                    var ds = clusterInfo.getDataServer(i);
                    System.out.println("    DataServer" + (i+1) + ": " + 
                        ds.getHost() + ":" + ds.getPort() +
                        " (æ–‡ä»¶: " + ds.getFileTotal() + ", å®¹é‡: " + ds.getUseCapacity() + "/" + ds.getCapacity() + "MB)");
                }
            }
            
            System.out.println("   ç»“æœ: âœ… æˆåŠŸ");
        } else {
            System.out.println("   ç»“æœ: âŒ å¤±è´¥");
            throw new Exception("æ— æ³•è·å–é›†ç¾¤ä¿¡æ¯");
        }

        System.out.println("ğŸŒ é›†ç¾¤ä¿¡æ¯è·å–æµ‹è¯•å®Œæˆ");
    }

    /**
     * è€ƒæ ¸ç‚¹A6: æµ‹è¯•ä¸‰å‰¯æœ¬åˆ†å¸ƒæŸ¥è¯¢
     */
    private void testReplicationInfo() throws Exception {
        System.out.println("\nğŸ”„ è€ƒæ ¸ç‚¹A6: æµ‹è¯•ä¸‰å‰¯æœ¬åˆ†å¸ƒæŸ¥è¯¢");
        System.out.println("-".repeat(40));

        // æŸ¥è¯¢æ‰€æœ‰æ–‡ä»¶çš„å‰¯æœ¬ä¿¡æ¯
        System.out.println("1. æŸ¥è¯¢æ‰€æœ‰æ–‡ä»¶çš„å‰¯æœ¬åˆ†å¸ƒ:");
        // é€šè¿‡fileSystemè·å–å†…éƒ¨çš„MinFSClient
        org.example.client.client.MinFSClient client = fileSystem.getClient();
        Metaserver.GetReplicationInfoResponse allReplicas = 
            client.getAllReplicationInfo();
        
        if (allReplicas != null) {
            System.out.println("  æ€»æ–‡ä»¶æ•°: " + allReplicas.getTotalFiles());
            System.out.println("  å¥åº·æ–‡ä»¶æ•°: " + allReplicas.getHealthyFiles());
            System.out.println("  å‰¯æœ¬ä¸è¶³æ–‡ä»¶æ•°: " + allReplicas.getUnderReplicatedFiles());
            System.out.println("  å‰¯æœ¬è¿‡å¤šæ–‡ä»¶æ•°: " + allReplicas.getOverReplicatedFiles());
            
            // æ˜¾ç¤ºå…·ä½“æ–‡ä»¶çš„å‰¯æœ¬ä¿¡æ¯
            if (!allReplicas.getFilesList().isEmpty()) {
                System.out.println("\n  æ–‡ä»¶å‰¯æœ¬è¯¦æƒ…:");
                for (Metaserver.ReplicationStatus file : allReplicas.getFilesList()) {
                    System.out.println("    æ–‡ä»¶: " + file.getPath());
                    System.out.println("      æœŸæœ›å‰¯æœ¬æ•°: " + file.getExpectedReplicas());
                    System.out.println("      å®é™…å‰¯æœ¬æ•°: " + file.getActualReplicas());
                    System.out.println("      å¥åº·çŠ¶æ€: " + file.getStatus());
                    
                    if (!file.getBlocksList().isEmpty()) {
                        System.out.println("      æ•°æ®å—åˆ†å¸ƒ:");
                        for (Metaserver.BlockReplicationInfo block : file.getBlocksList()) {
                            System.out.println("        å—ID " + block.getBlockId() + 
                                " -> " + block.getLocationsList() + 
                                " (å‰¯æœ¬æ•°: " + block.getReplicaCount() + ")");
                        }
                    }
                }
            }
            System.out.println("   ç»“æœ: âœ… æˆåŠŸ");
        } else {
            System.out.println("   ç»“æœ: âŒ å¤±è´¥");
            throw new Exception("æ— æ³•è·å–å‰¯æœ¬åˆ†å¸ƒä¿¡æ¯");
        }

        // æŸ¥è¯¢ç‰¹å®šæ–‡ä»¶çš„å‰¯æœ¬ä¿¡æ¯
        if (fileSystem.getFileStats(TEST_FILE) != null) {
            System.out.println("\n2. æŸ¥è¯¢ç‰¹å®šæ–‡ä»¶çš„å‰¯æœ¬åˆ†å¸ƒ: " + TEST_FILE);
            Metaserver.GetReplicationInfoResponse fileReplicas = 
                client.getReplicationInfo(TEST_FILE);
            
            if (fileReplicas != null && !fileReplicas.getFilesList().isEmpty()) {
                Metaserver.ReplicationStatus file = fileReplicas.getFilesList().get(0);
                System.out.println("  æ–‡ä»¶: " + file.getPath());
                System.out.println("  æœŸæœ›å‰¯æœ¬æ•°: " + file.getExpectedReplicas());
                System.out.println("  å®é™…å‰¯æœ¬æ•°: " + file.getActualReplicas());
                System.out.println("  å¥åº·çŠ¶æ€: " + file.getStatus());
                System.out.println("   ç»“æœ: âœ… æˆåŠŸ");
            }
        }

        System.out.println("ğŸ”„ ä¸‰å‰¯æœ¬åˆ†å¸ƒæŸ¥è¯¢æµ‹è¯•å®Œæˆ");
    }

    /**
     * ç”Ÿæˆæµ‹è¯•æ•°æ®
     */
    private byte[] generateTestData(int size) {
        Random random = new Random(12345); // å›ºå®šç§å­ä¿è¯å¯é‡å¤æ€§
        byte[] data = new byte[size];
        random.nextBytes(data);
        return data;
    }

    /**
     * è®¡ç®—MD5å“ˆå¸Œå€¼
     */
    private String calculateMD5(byte[] data) {
        try {
            MessageDigest md = MessageDigest.getInstance("MD5");
            byte[] hash = md.digest(data);
            StringBuilder sb = new StringBuilder();
            for (byte b : hash) {
                sb.append(String.format("%02x", b));
            }
            return sb.toString();
        } catch (Exception e) {
            throw new RuntimeException("è®¡ç®—MD5å¤±è´¥", e);
        }
    }
}